ResourceSelection package version history

Version 0.1-3, August 23, 2011
    * .onLoad added to zzz.R

Version 0.1-2, July 9, 2011
    * packageStartupMessage used in zzz.R .onAttach

Version 0.1-1, June 7, 2011
    * kdepairs plots abs(cor), so negative values can get large.
    * hoslem.test: only unique quantile values are used in cut().

Version 0.1-0, May 20, 2011
    * initial buch of function released to R-Forge.